--- a/lobby.html
+++ b/lobby.html
@@ -25,6 +25,8 @@
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
         <a id="cirarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="" style="background-color: #d6660a;">Criar Lobby</a>
+        <li class="nav-item mt-2 mt-md-0 ms-md-2">
+          <a id="Perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="" style="background-color: #d6660a;">Perfil</a>
       </li>
     </ul>
   </div>
