--- a/inicio.html
+++ b/inicio.html
@@ -21,12 +21,13 @@
   <div class="container d-flex flex-column align-items-center">
     <ul class="nav flex-column flex-md-row">
       <li class="nav-item">
-        <a id="entrarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="" style="background-color: #d6660a;">Entrar em um Lobby</a>
+        <a id="entrarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="https://example.com/entrar-lobby" style="background-color: #d6660a;">Entrar em um Lobby</a>
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
-        <a id="cirarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="" style="background-color: #d6660a;">Criar Lobby</a>
-        <li class="nav-item mt-2 mt-md-0 ms-md-2">
-          <a id="Perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="" style="background-color: #d6660a;">Perfil</a>
+        <a id="cirarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="https://example.com/criar-lobby" style="background-color: #d6660a;">Criar Lobby</a>
+      </li>
+      <li class="nav-item mt-2 mt-md-0 ms-md-2">
+        <a id="Perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="https://example.com/perfil" style="background-color: #d6660a;">Perfil</a>
       </li>
     </ul>
   </div>
