--- a/inicio.html
+++ b/inicio.html
@@ -27,7 +27,7 @@
         <a id="cirarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="https://example.com/criar-lobby" style="background-color: #d6660a;">Criar Lobby</a>
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
-        <a id="Perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="https://example.com/perfil" style="background-color: #d6660a;">Perfil</a>
+        <a id="Perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href=".../.../perfil.html" style="background-color: #d6660a;">Perfil</a>
       </li>
     </ul>
   </div>
