--- a/inicio.html
+++ b/inicio.html
@@ -30,6 +30,10 @@
         <a id="Perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="/perfil.html" style="background-color: #d6660a;">Perfil</a>
       </li>
     </ul>
+     <div class="mb-3">
+      <label for="lobbyNumber" class="form-label fs-5">Número do Lobby</label>
+      <input type="text" class="form-control fs-5" id="lobbyNumber" placeholder="Digite o número do lobby">
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
