--- a/inicio.html
+++ b/inicio.html
@@ -19,23 +19,35 @@
 
 <body>
   <div class="container d-flex flex-column align-items-center">
-    <ul class="nav flex-column flex-md-row">
+    <ul class="nav flex-column flex-md-row mb-4">
       <li class="nav-item">
-        <a id="entrarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="/lobby/lobby.htm" style="background-color: #d6660a;">Entrar em um Lobby</a>
+        <a id="entrarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Entrar em um Lobby</a>
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
-        <a id="cirarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="/lobby/lobby.htm" style="background-color: #d6660a;">Criar Lobby</a>
+        <a id="criarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="https://example.com/criar-lobby" style="background-color: #d6660a;">Criar Lobby</a>
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
-        <a id="Perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="/perfil.html" style="background-color: #d6660a;">Perfil</a>
+        <a id="perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="https://example.com/perfil" style="background-color: #d6660a;">Perfil</a>
       </li>
     </ul>
-     <div class="mb-3">
+    <div class="mb-3">
       <label for="lobbyNumber" class="form-label fs-5">Número do Lobby</label>
       <input type="text" class="form-control fs-5" id="lobbyNumber" placeholder="Digite o número do lobby">
     </div>
+    <button id="goToLobby" class="btn btn-primary">Ir para o Lobby</button>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script>
+    document.getElementById('goToLobby').addEventListener('click', function() {
+      const lobbyNumber = document.getElementById('lobbyNumber').value;
+      if (lobbyNumber) {
+        window.location.href = `lobby.html?id=${lobbyNumber}`;
+      } else {
+        alert('Por favor, insira um número de lobby.');
+      }
+    });
+  </script>
 </body>
+
 </html>
