--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -1,1 +1,60 @@
-;
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Lobby</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <h1 id="lobbyName"></h1>
+    <p id="lobbyDescription"></p>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      // Obtém o ID do lobby da URL
+      const urlParams = new URLSearchParams(window.location.search);
+      const lobbyId = urlParams.get('id');
+
+      if (lobbyId) {
+        // Faz uma requisição para obter os dados do db.json
+        fetch('path/to/your/db.json')
+          .then(response => response.json())
+          .then(data => {
+            const lobby = data.lobbies.find(lobby => lobby.id === lobbyId);
+            if (lobby) {
+              // Atualiza a página com os dados do lobby
+              document.getElementById('lobbyName').textContent = lobby.name;
+              document.getElementById('lobbyDescription').textContent = lobby.description;
+            } else {
+              document.getElementById('lobbyName').textContent = 'Lobby não encontrado';
+              document.getElementById('lobbyDescription').textContent = '';
+            }
+          })
+          .catch(error => {
+            console.error('Erro ao carregar os dados do lobby:', error);
+          });
+      } else {
+        document.getElementById('lobbyName').textContent = 'ID do Lobby não fornecido';
+        document.getElementById('lobbyDescription').textContent = '';
+      }
+    });
+  </script>
+</body>
+
+</html>
