--- a/inicio.html
+++ b/inicio.html
@@ -42,7 +42,7 @@
     document.getElementById('goToLobby').addEventListener('click', function() {
       const lobbyNumber = document.getElementById('lobbyNumber').value;
       if (lobbyNumber) {
-        window.location.href = `lobby.html?id=${lobbyNumber}`;
+        window.location.href = `\lobby\lobby.html?id=${lobbyNumber}`;
       } else {
         alert('Por favor, insira um número de lobby.');
       }
