--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lobby</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
@@ -20,8 +20,8 @@
 
 <body>
   <div class="container">
-    <h1 id="lobbyName"></h1>
-    <p id="lobbyId" class="fw-bold"></p>
+    <h1 id="lobbyName">Lobby</h1>
+    <p id="lobbyId" class="fw-bold">ID: </p>
     <p id="lobbyDescription"></p>
     <h2>Jogadores</h2>
     <ul id="playersList" class="list-group"></ul>
@@ -33,13 +33,20 @@
       // Obtém o ID do lobby da URL
       const urlParams = new URLSearchParams(window.location.search);
       const lobbyId = urlParams.get('id');
-
+      
+      console.log('Lobby ID from URL:', lobbyId); // Debug: Check if lobby ID is being retrieved
+      
       if (lobbyId) {
         // Faz uma requisição para obter os dados do db.json
-        fetch('https://dbwar.onrender.com/usuarios')
-          .then(response => response.json())
+        fetch('path/to/your/db.json')
+          .then(response => {
+            console.log('Response status:', response.status); // Debug: Check the response status
+            return response.json();
+          })
           .then(data => {
+            console.log('Data from JSON:', data); // Debug: Log the data received from JSON
             const lobby = data.lobbies.find(lobby => lobby.id === lobbyId);
+            console.log('Lobby found:', lobby); // Debug: Check if the correct lobby is found
             if (lobby) {
               // Atualiza a página com os dados do lobby
               document.getElementById('lobbyName').textContent = lobby.name;
@@ -48,6 +55,7 @@
 
               // Lista os jogadores
               const playersList = document.getElementById('playersList');
+              playersList.innerHTML = ''; // Clear any previous content
               lobby.players.forEach(player => {
                 const listItem = document.createElement('li');
                 listItem.classList.add('list-group-item');
