--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -20,8 +20,8 @@
 
 <body>
   <div class="container">
-    <h1 id="lobbyName"></h1>
-    <p id="lobbyId" class="fw-bold"></p>
+    <h1 id="lobbyName">Lobby</h1>
+    <p id="lobbyId" class="fw-bold">ID: </p>
     <p id="lobbyDescription"></p>
     <h2>Jogadores</h2>
     <ul id="playersList" class="list-group"></ul>
@@ -34,16 +34,25 @@
       const urlParams = new URLSearchParams(window.location.search);
       const lobbyId = urlParams.get('id');
 
+      console.log('Lobby ID from URL:', lobbyId); // Debug: Check if lobby ID is being retrieved
+
       if (lobbyId) {
         // Faz uma requisição para obter os dados do db.json
         fetch('https://dbwar.onrender.com/lobbies')
-          .then(response => response.json())
+          .then(response => {
+            console.log('Response status:', response.status); // Debug: Check the response status
+            return response.json();
+          })
           .then(data => {
-            const lobby = data.lobbies.find(lobby => lobby.id === lobbyId);
+            console.log('Data from JSON:', data); // Debug: Log the data received from JSON
+            if (!data || !Array.isArray(data)) {
+              throw new Error('Estrutura do JSON inválida');
+            }
+
+            const lobby = data.find(lobby => lobby.id === lobbyId);
+            console.log('Lobby found:', lobby); // Debug: Check if the correct lobby is found
 
             if (lobby) {
-              console.log('Lobby found:', lobby); // Debug: Check if the correct lobby is found
-
               // Atualiza a página com os dados do lobby
               document.getElementById('lobbyName').textContent = lobby.name;
               document.getElementById('lobbyId').textContent = `ID: ${lobby.id}`;
