--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -23,6 +23,7 @@
     <h1 id="lobbyName">Lobby</h1>
     <p id="lobbyId" class="fw-bold">ID: </p>
     <p id="lobbyDescription"></p>
+    <p id="lobbyDescription"></p>
     <h2>Jogadores</h2>
     <ul id="playersList" class="list-group"></ul>
   </div>
