--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -24,7 +24,7 @@
     <p id="lobbyDescription"></p>
     <p id="lobbyId" class="fw-bold">ID: </p>
     <h2>Jogadores</h2>
-    <ul id="playersList" class="list-group"></ul>
+    <ul id="playersList" class="list-group" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></ul>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
