--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -24,63 +24,11 @@
     <p id="lobbyDescription"></p>
     <p id="lobbyId" class="fw-bold">ID: </p>
     <h2>Jogadores</h2>
-    <ul id="playersList" class="list-group" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></ul>
+    <ul id="playersList" class="list-group"></ul>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      // Obtém o ID do lobby da URL
-      const urlParams = new URLSearchParams(window.location.search);
-      const lobbyId = urlParams.get('id');
-
-      console.log('Lobby ID from URL:', lobbyId); // Debug: Check if lobby ID is being retrieved
-
-      if (lobbyId) {
-        // Faz uma requisição para obter os dados do db.json
-        fetch('https://dbwar.onrender.com/lobbies')
-          .then(response => {
-            console.log('Response status:', response.status); // Debug: Check the response status
-            return response.json();
-          })
-          .then(data => {
-            console.log('Data from JSON:', data); // Debug: Log the data received from JSON
-            if (!data || !Array.isArray(data)) {
-              throw new Error('Estrutura do JSON inválida');
-            }
-
-            const lobby = data.find(lobby => lobby.id === lobbyId);
-            console.log('Lobby found:', lobby); // Debug: Check if the correct lobby is found
-
-            if (lobby) {
-              // Atualiza a página com os dados do lobby
-              document.getElementById('lobbyName').textContent = lobby.name;
-              document.getElementById('lobbyId').textContent = `ID: ${lobby.id}`;
-              document.getElementById('lobbyDescription').textContent = lobby.description;
-
-              // Lista os jogadores
-              const playersList = document.getElementById('playersList');
-              playersList.innerHTML = ''; // Clear any previous content
-              lobby.players.forEach(player => {
-                const listItem = document.createElement('li');
-                listItem.classList.add('list-group-item');
-                listItem.textContent = `${player.name} (Score: ${player.score})`;
-                playersList.appendChild(listItem);
-              });
-            } else {
-              document.getElementById('lobbyName').textContent = 'Lobby não encontrado';
-              document.getElementById('lobbyDescription').textContent = '';
-            }
-          })
-          .catch(error => {
-            console.error('Erro ao carregar os dados do lobby:', error);
-          });
-      } else {
-        document.getElementById('lobbyName').textContent = 'ID do Lobby não fornecido';
-        document.getElementById('lobbyDescription').textContent = '';
-      }
-    });
-  </script>
+  <script src="lobby.js"></script>
 </body>
 
 </html>
