--- a/index.html
+++ b/index.html
@@ -1,103 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-
 <body style="background-color: #48067f; color: white; font-family: Arial, sans-serif;">
-    <div id="loginModal" class="modal fade" tabindex="-1"
-        style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+    <div id="loginModal" class="modal fade" tabindex="-1" style="display: flex; justify-content: center; align-items: center; height: 100vh;">
         <div class="modal-dialog" style="max-width: 400px; width: 100%; border: none; border-radius: 10px; overflow: hidden;">
-            <div class="modal-content" style="border: none;">
-                <div class="modal-header"
-                    style="background-color: rgb(214, 102, 10); color: white; display: flex; justify-content: space-between; align-items: center;">
-                    <h5 class="modal-title">Faça login</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
-                        style="background: none; border: none; color: white; font-size: 20px;">&times;</button>
-                </div>
-                <div class="modal-body" style="background-color: white; color: #48067f; padding: 20px;">
-                    <form id="formLogin">
-                        <div class="mb-3">
-                            <label for="usuarioLogin" class="form-label">Usuário</label>
-                            <input type="text" class="form-control" id="usuarioLogin" required
-                                style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
-                        </div>
-                        <div class="mb-3">
-                            <label for="senhaLogin" class="form-label">Senha</label>
-                            <input type="password" class="form-control" id="senhaLogin" required
-                                style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
-                        </div>
-                    </form>
-                    <form id="formSignup" style="display: none;">
-                        <div class="mb-3">
-                            <label for="usuarioSignup" class="form-label">Usuário</label>
-                            <input type="text" class="form-control" id="usuarioSignup" required
-                                style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
-                        </div>
-                        <div class="mb-3">
-                            <label for="senhaSignup" class="form-label">Senha</label>
-                            <input type="password" class="form-control" id="senhaSignup" required
-                                style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
-                        </div>
-                        <div class="mb-3">
-                            <label for="confirmarSenhaSignup" class="form-label">Confirmar Senha</label>
-                            <input type="password" class="form-control" id="confirmarSenhaSignup" required
-                                style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer"
-                    style="background-color: white; padding: 10px; display: flex; justify-content: flex-end;">
-                    <button type="button" class="btn btn-secondary me-2" onclick="toggleForms()"
-                        style="padding: 10px 20px; border-radius: 5px; color: white;">Criar Conta</button>
-                    <button type="button" class="btn btn-primary" onclick="login()"
-                        style="background-color: rgb(214, 102, 10); border: none; padding: 10px 20px; border-radius: 5px; color: white;">Entrar</button>
-                </div>
+          <div class="modal-content" style="border: none;">
+            <div class="modal-header" style="background-color: rgb(214, 102, 10); color: white; display: flex; justify-content: space-between; align-items: center;">
+              <h5 class="modal-title">Faça login</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="background: none; border: none; color: white; font-size: 20px;">&times;</button>
             </div>
+            <div class="modal-body" style="background-color: white; color: #48067f; padding: 20px;">
+              <form id="formLogin">
+                <div class="mb-3">
+                  <label for="usuarioLogin" class="form-label">Usuário</label>
+                  <input type="text" class="form-control" id="usuarioLogin" required style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
+                </div>
+                <div class="mb-3">
+                  <label for="senhaLogin" class="form-label">Senha</label>
+                  <input type="password" class="form-control" id="senhaLogin" required style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer" style="background-color: white; padding: 10px; display: flex; justify-content: flex-end;">
+              <button type="button" class="btn btn-primary" onclick="login()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 20px; border-radius: 5px; color: white;">Entrar</button>
+            </div>
+          </div>
         </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
-    <script>
-        function toggleForms() {
-            const loginForm = document.getElementById('formLogin');
-            const signupForm = document.getElementById('formSignup');
-            const modalTitle = document.querySelector('.modal-title');
-            const toggleButton = document.querySelector('.btn-secondary');
-            const actionButton = document.querySelector('.btn-primary');
-
-            if (loginForm.style.display === 'none') {
-                loginForm.style.display = 'block';
-                signupForm.style.display = 'none';
-                modalTitle.textContent = 'Faça login';
-                toggleButton.textContent = 'Criar Conta';
-                actionButton.textContent = 'Entrar';
-                actionButton.setAttribute('onclick', 'login()');
-            } else {
-                loginForm.style.display = 'none';
-                signupForm.style.display = 'block';
-                modalTitle.textContent = 'Criar Conta';
-                toggleButton.textContent = 'Voltar ao Login';
-                actionButton.textContent = 'Registrar';
-                actionButton.setAttribute('onclick', 'signup()');
-            }
-        }
-
-        function login() {
-            // Lógica para fazer login
-        }
-
-        function signup() {
-            // Lógica para criar novo usuário
-        }
-    </script>
+      </div>
+      <script src="./auth.js"></script>
 </body>
-
 </html>
