--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           <div class="modal-content" style="border: none;">
             <div class="modal-header" style="background-color: rgb(214, 102, 10); color: white; display: flex; justify-content: space-between; align-items: center;">
               <h5 class="modal-title">Faça login</h5>
+			  
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="background: none; border: none; color: white; font-size: 20px;">&times;</button>
             </div>
             <div class="modal-body" style="background-color: white; color: #48067f; padding: 20px;">
@@ -27,6 +28,7 @@
             </div>
             <div class="modal-footer" style="background-color: white; padding: 10px; display: flex; justify-content: flex-end;">
               <button type="button" class="btn btn-primary" onclick="login()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 20px; border-radius: 5px; color: white;">Entrar</button>
+			  <button type="button" class="btn btn-primary" onclick="criarconta()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Conta</button>
             </div>
           </div>
         </div>
