--- a/cadastrarUsuario.html
+++ b/cadastrarUsuario.html
@@ -29,7 +29,7 @@
               </form>
             </div>
             <div class="modal-footer" style="background-color: white; padding: 10px; display: flex; justify-content: flex-end;">
-            <button type="button" class="btn btn-primary" onclick="criarconta()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Conta</button>
+            <button type="button" class="btn btn-primary" onclick="signup()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Conta</button>
             </div>
           </div>
         </div>
