--- a/cadastrarUsuario.html
+++ b/cadastrarUsuario.html
@@ -24,7 +24,7 @@
                   <label for="senhaLogin" class="form-label">Senha</label>
                   <input type="password" class="form-control" id="senhaLogin" required style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
                   <label for="senhaLogin" class="form-label">Confirmar Senha</label>
-                  <input type="password" class="form-control" id="senhaLogin" required style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
+                  <input type="password" class="form-control" id="senhaLogin2" required style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
                 </div>
               </form>
             </div>
