--- a/inicio.html
+++ b/inicio.html
@@ -24,27 +24,58 @@
         <a id="entrarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Entrar em um Lobby</a>
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
-        <a id="criarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="https://example.com/criar-lobby" style="background-color: #d6660a;">Criar Lobby</a>
+        <a id="criarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Criar Lobby</a>
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
         <a id="perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="https://example.com/perfil" style="background-color: #d6660a;">Perfil</a>
       </li>
     </ul>
-    <div class="mb-3">
+    <div class="mb-3" id="entrarLobbyForm" style="display: none;">
       <label for="lobbyNumber" class="form-label fs-5">Número do Lobby</label>
       <input type="text" class="form-control fs-5" id="lobbyNumber" placeholder="Digite o número do lobby">
+      <button id="goToLobby" class="btn btn-primary mt-3">Ir para o Lobby</button>
     </div>
-    <button id="goToLobby" class="btn btn-primary">Ir para o Lobby</button>
+    <div class="mb-3" id="criarLobbyForm" style="display: none;">
+      <label for="numeroJogadores" class="form-label fs-5">Número de Jogadores</label>
+      <input type="number" class="form-control fs-5" id="numeroJogadores" placeholder="Digite o número de jogadores">
+      <label for="listaJogadores" class="form-label fs-5 mt-3">Lista de Jogadores</label>
+      <textarea class="form-control fs-5" id="listaJogadores" placeholder="Digite a lista de jogadores"></textarea>
+      <label for="lobbyNumberCriar" class="form-label fs-5 mt-3">Número do Lobby</label>
+      <input type="text" class="form-control fs-5" id="lobbyNumberCriar" placeholder="Digite o número do lobby">
+      <button id="criarNovoLobby" class="btn btn-primary mt-3">Criar Lobby</button>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script>
+    document.getElementById('entrarLobby').addEventListener('click', function() {
+      document.getElementById('entrarLobbyForm').style.display = 'block';
+      document.getElementById('criarLobbyForm').style.display = 'none';
+    });
+
+    document.getElementById('criarLobby').addEventListener('click', function() {
+      document.getElementById('criarLobbyForm').style.display = 'block';
+      document.getElementById('entrarLobbyForm').style.display = 'none';
+    });
+
     document.getElementById('goToLobby').addEventListener('click', function() {
       const lobbyNumber = document.getElementById('lobbyNumber').value;
       if (lobbyNumber) {
         window.location.href = `/lobby/lobby.html?id=${lobbyNumber}`;
       } else {
         alert('Por favor, insira um número de lobby.');
+      }
+    });
+
+    document.getElementById('criarNovoLobby').addEventListener('click', function() {
+      const numeroJogadores = document.getElementById('numeroJogadores').value;
+      const listaJogadores = document.getElementById('listaJogadores').value;
+      const lobbyNumberCriar = document.getElementById('lobbyNumberCriar').value;
+      // Aqui você pode realizar as ações necessárias com os dados do novo lobby
+      if (numeroJogadores && listaJogadores && lobbyNumberCriar) {
+        alert('Lobby criado com sucesso!');
+      } else {
+        alert('Por favor, preencha todos os campos.');
       }
     });
   </script>
