--- a/inicio.html
+++ b/inicio.html
@@ -41,7 +41,7 @@
       <label for="listaJogadores" class="form-label fs-5 mt-3">Lista de Jogadores</label>
       <textarea class="form-control fs-5" id="listaJogadores" placeholder="Digite a lista de jogadores"></textarea>
       <label for="lobbyNumberCriar" class="form-label fs-5 mt-3">Número do Lobby</label>
-      <input type="text" class="form-control fs-5" id="lobbyNumberCriar" placeholder="Digite o número do lobby">
+      <input type="text" class="form-control fs-5" id="lobbyNumberCriar" placeholder=""> <!-- puxar id do lobby -->
       <button id="criarNovoLobby" class="btn btn-primary mt-3">Criar Lobby</button>
     </div>
   </div>
