--- a/perfil.html
+++ b/perfil.html
@@ -4,41 +4,74 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Peril Usuario</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <title>Perfil de Usuário</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="../style.css" rel="stylesheet">
 </head>
+
 <body>
   <header class="container-fluid">
-    <div class="d-flex flex-column flex-md-row align-items-center">
-        <a href="../index.html"><img src="../imagens/logoPet.png" width="130px" height="100px" alt="Logo" class="me-3"></a>
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
+      <a href=""><img src="" width="130px" height="100px" alt="" class="me-3"></a> <!-- colocar o href -->
       <nav class="d-flex flex-column flex-md-row justify-content-between w-100">
         <ul class="nav flex-column flex-md-row">
           <li class="nav-item">
-            <a id="corT" class="nav-link fw-bold fs-5 fs-md-2" href="">Historico de Partidas</a>  < !--linkar historico -- >
-             <ul class="nav flex-column flex-md-row">
-            <li class="nav-item">
-             <li class="nav-item">
-        <a id="entrarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Entrar em um Lobby</a>
-      </li>
-      <li class="nav-item mt-2 mt-md-0 ms-md-2">
-        <a id="criarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="https://example.com/criar-lobby" style="background-color: #d6660a;">Criar Lobby</a>
-      </li>
-       <div class="mb-3">
+            <a id="corT" class="nav-link fw-bold fs-5 fs-md-2" href="">Histórico de Partidas</a> <!--linkar historico -->
+          </li>
+        </ul>
+        <div class="d-flex">
+          <a id="entrarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold mt-2 mt-md-0 ms-md-2" style="background-color: #d6660a;">Entrar em um Lobby</a>
+          <a id="criarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold mt-2 mt-md-0 ms-md-2"  style="background-color: #d6660a;">Criar Lobby</a>
+        </div>
+      </nav>
+    </div>
+  </header>
+ <div class="mb-3" id="entrarLobbyForm" style="display: none;">
       <label for="lobbyNumber" class="form-label fs-5">Número do Lobby</label>
       <input type="text" class="form-control fs-5" id="lobbyNumber" placeholder="Digite o número do lobby">
+      <button id="goToLobby" class="btn btn-primary mt-3">Ir para o Lobby</button>
     </div>
-    <button id="goToLobby" class="btn btn-primary">Ir para o Lobby</button>
+    <div class="mb-3" id="criarLobbyForm" style="display: none;">
+      <label for="numeroJogadores" class="form-label fs-5">Número de Jogadores</label>
+      <input type="number" class="form-control fs-5" id="numeroJogadores" placeholder="Digite o número de jogadores">
+      <label for="listaJogadores" class="form-label fs-5 mt-3">Lista de Jogadores</label>
+      <textarea class="form-control fs-5" id="listaJogadores" placeholder="Digite a lista de jogadores"></textarea>
+      <label for="lobbyNumberCriar" class="form-label fs-5 mt-3">Número do Lobby</label>
+      <input type="text" class="form-control fs-5" id="lobbyNumberCriar" placeholder="Digite o número do lobby">
+      <button id="criarNovoLobby" class="btn btn-primary mt-3">Criar Lobby</button>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script>
+    document.getElementById('entrarLobby').addEventListener('click', function() {
+      document.getElementById('entrarLobbyForm').style.display = 'block';
+      document.getElementById('criarLobbyForm').style.display = 'none';
+    });
+
+    document.getElementById('criarLobby').addEventListener('click', function() {
+      document.getElementById('criarLobbyForm').style.display = 'block';
+      document.getElementById('entrarLobbyForm').style.display = 'none';
+    });
+
     document.getElementById('goToLobby').addEventListener('click', function() {
       const lobbyNumber = document.getElementById('lobbyNumber').value;
       if (lobbyNumber) {
         window.location.href = `/lobby/lobby.html?id=${lobbyNumber}`;
       } else {
         alert('Por favor, insira um número de lobby.');
+      }
+    });
+
+    document.getElementById('criarNovoLobby').addEventListener('click', function() {
+      const numeroJogadores = document.getElementById('numeroJogadores').value;
+      const listaJogadores = document.getElementById('listaJogadores').value;
+      const lobbyNumberCriar = document.getElementById('lobbyNumberCriar').value;
+      // Aqui você pode realizar as ações necessárias com os dados do novo lobby
+      if (numeroJogadores && listaJogadores && lobbyNumberCriar) {
+        alert('Lobby criado com sucesso!');
+      } else {
+        alert('Por favor, preencha todos os campos.');
       }
     });
   </script>
