--- a/cadastrarUsuario.html
+++ b/cadastrarUsuario.html
@@ -31,6 +31,8 @@
             <div class="modal-footer" style="background-color: white; padding: 10px; display: flex; justify-content: flex-end;">
             <button type="button" class="btn btn-primary" onclick="signup()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Conta</button>
 		<button type="button" class="btn btn-primary" onclick="login()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 20px; border-radius: 5px; color: white;">Entrar</button>
+		<a href="login.html" class="btn-primary">Entrar</a>
+
             </div>
           </div>
         </div>
