--- a/inicio.html
+++ b/inicio.html
@@ -29,6 +29,8 @@
       </li>
     </ul>
     <div class="mb-3" id="entrarLobbyForm" style="display: none;">
+      <label for="lobbyNumber" class="form-label fs-5">Número do Lobby</label>
+      <input type="text" class="form-control fs-5" id="lobbyNumber" placeholder="Digite o número do lobby">
       <button id="goToLobby" class="btn btn-primary mt-3">Ir para o Lobby</button>
     </div>
     <div class="mb-3" id="criarLobbyForm" style="display: none;">
