--- a/inicio.html
+++ b/inicio.html
@@ -34,9 +34,8 @@
       <button id="goToLobby" class="btn btn-primary mt-3">Ir para o Lobby</button>
     </div>
     <div class="mb-3" id="criarLobbyForm" style="display: none;">
-      <label for="numeroJogadores" class="form-label fs-5">Número de Jogadores</label>
-      <input type="number" class="form-control fs-5" id="numeroJogadores" placeholder="Digite o número de jogadores">
-      <button id="criarNovoLobby" class="btn btn-primary mt-3">Criar Lobby</button>
+    <button type="button" class="btn btn-primary" onclick="criarlobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
+    
     </div>
   </div>
 
