--- a/inicio.html
+++ b/inicio.html
@@ -27,6 +27,9 @@
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
         <a id="perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="perfil.html" style="background-color: #d6660a;">Perfil</a>
       </li>
+      <li class="nav-item mt-2 mt-md-0 ms-md-2">
+        <button id="btnLogoff" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" style="background-color: #d6660a; border: none;" onclick="logoff()">Logoff</button>
+      </li>      
     </ul>
     <div class="mb-3" id="entrarLobbyForm" style="display: none;">
       <label for="lobbyNumber" class="form-label fs-5">Número do Lobby</label>
@@ -35,7 +38,6 @@
     </div>
     <div class="mb-3" id="criarLobbyForm" style="display: none;">
     <button type="button" class="btn btn-primary" onclick="criarlobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
-    
     </div>
   </div>
 
