--- a/inicio.html
+++ b/inicio.html
@@ -25,7 +25,7 @@
         <a id="criarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Criar Lobby</a>
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
-        <a id="perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="perfil.html" style="background-color: #d6660a;">Perfil</a>
+        <a id="PerfilForm" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Perfil</a>
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
         <button id="btnLogoff" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" style="background-color: #d6660a; border: none;" onclick="logoff()">Logoff</button>
@@ -37,6 +37,10 @@
       <button id="goToLobby" class="btn btn-primary mt-3">Ir para o Lobby</button>
     </div>
     <div class="mb-3" id="criarLobbyForm" style="display: none;">
+    <button type="button" class="btn btn-primary" onclick="criarlobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
+    </div>
+    </div>
+    <div class="mb-3" id="PerfilForm" style="display: none;">
     <button type="button" class="btn btn-primary" onclick="criarlobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
     </div>
   </div>
