--- a/inicio.html
+++ b/inicio.html
@@ -25,7 +25,10 @@
         <a id="criarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Criar Lobby</a>
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
-        <a id="PerfilForm" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Perfil</a>
+        <a id="perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="perfil.html" style="background-color: #d6660a;">Perfil</a>
+      </li>
+      <li class="nav-item mt-2 mt-md-0 ms-md-2">
+        <a id="perfil2" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="perfil.html" style="background-color: #d6660a;">Perfil</a>
       </li>
       <li class="nav-item mt-2 mt-md-0 ms-md-2">
         <button id="btnLogoff" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" style="background-color: #d6660a; border: none;" onclick="logoff()">Logoff</button>
@@ -39,10 +42,7 @@
     <div class="mb-3" id="criarLobbyForm" style="display: none;">
     <button type="button" class="btn btn-primary" onclick="criarlobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
     </div>
-    </div>
-    <div class="mb-3" id="PerfilForm" style="display: none;">
-    <button type="button" class="btn btn-primary" onclick="criarlobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
-    </div>
+    
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
