--- a/inicio.html
+++ b/inicio.html
@@ -42,9 +42,9 @@
     <div class="mb-3" id="criarLobbyForm" style="display: none;">
     <button type="button" class="btn btn-primary" onclick="criarlobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
     </div>
-    <div class="mb-3" id="Perfil2" style="display: none;">
+    <div class="mb-3" id="Perfil" style="display: none;">
       <button type="button" class="btn btn-primary" onclick="criarlobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
-      </div>
+    </div>
     
   </div>
 
