--- a/inicio.html
+++ b/inicio.html
@@ -28,7 +28,7 @@
           <a id="perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="perfil.html" style="background-color: #d6660a;">Perfil</a>
         </li>
         <li class="nav-item mt-2 mt-md-0 ms-md-2">
-          <a id="Perfil2" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Perfil2</a>
+          <a id="Perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Perfil2</a>
         </li>
         <li class="nav-item mt-2 mt-md-0 ms-md-2">
           <button id="btnLogoff" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" style="background-color: #d6660a; border: none;" onclick="logoff()">Logoff</button>
