Atualizei o botão de perfil detalhado

--- a/inicio.html
+++ b/inicio.html
@@ -25,7 +25,7 @@
           <a id="criarLobby" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Criar Lobby</a>
         </li>
         <li class="nav-item mt-2 mt-md-0 ms-md-2">
-          <a id="perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="perfil.html" style="background-color: #d6660a;">Perfil</a>
+          <a id="perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="perfil.html" style="background-color: #d6660a;">Perfil Detalhado</a>
         </li>
         <li class="nav-item mt-2 mt-md-0 ms-md-2">
           <a id="Perfil" class="nav-link text-light rounded-4 px-3 fs-5 fs-md-4 fw-bold" href="#" style="background-color: #d6660a;">Perfil2</a>
