--- a/inicio.html
+++ b/inicio.html
@@ -37,7 +37,10 @@
       <div class="mb-3" id="entrarLobbyForm" style="display: none;">
         <label for="lobbyNumber" class="form-label fs-5">Número do Lobby</label>
         <input type="text" class="form-control fs-5" id="lobbyNumber" placeholder="Digite o número do lobby">
-        <button id="goToLobby" class="btn btn-primary mt-3">Ir para o Lobby</button>
+        
+        <button type="goToLobby" class="btn btn-primary" onclick="adicionarUsuarioAoLobby(lobbyNumber, usuarioLogado)" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
+     
+        <!--adicionarUsuarioAoLobby(lobbyId, usuarioId)-->
       </div>
       <div class="mb-3" id="criarLobbyForm" style="display: none;">
       <button type="button" class="btn btn-primary" onclick="criarlobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Criar Lobby</button>
