--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -29,12 +29,14 @@
 
     <button type="goToLobby" class="btn btn-primary" onclick="adicionarUsuarioAoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Entrar Lobby</button>
     <button type="goOutLobby" class="btn btn-primary" onclick="removerUsuarioDoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Sair do Lobby</button>
-  
+    <button type="goToLobby" class="btn btn-primary" href="/Partida/Partida.html" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Começar partida</button>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="lobby.js"></script>
   <script src="/scripts.js"></script>
+
 
 </body>
 
