--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -29,7 +29,7 @@
 
     <button type="goToLobby" class="btn btn-primary" onclick="adicionarUsuarioAoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Entrar Lobby</button>
     <button type="goOutLobby" class="btn btn-primary" onclick="removerUsuarioDoLobby()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Sair do Lobby</button>
-    <button type="goToPlay" class="btn btn-primary" onclick = "começarPartida()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Começar partida</button>
+    <button type="goToPlay" class="btn btn-primary" onclick = "comecarPartida()" style="background-color: rgb(214, 102, 10); border: none; padding: 10px 10px; border-radius: 5px; color: white;">Começar partida</button>
 
   </div>
 
