--- a/Partida/teste.html
+++ b/Partida/teste.html
@@ -42,7 +42,7 @@
 
         // Load texture and create the map
         const loader = new THREE.TextureLoader();
-        loader.load('4020317.jpg', function(texture) {
+        loader.load('https://github.com/LKNunes/WarFast/blob/main/Partida/4020317.jpg', function(texture) {
             const geometry = new THREE.PlaneGeometry(200, 100);
             const material = new THREE.MeshBasicMaterial({ map: texture });
             const plane = new THREE.Mesh(geometry, material);
