--- a/src/teste.html
+++ b/src/teste.html
@@ -9,6 +9,6 @@
     </style>
 </head>
 <body>
-    <script type="module" src="./teste.js"></script>
+    <script type="module" src="/src/teste.js"></script>
 </body>
 </html>
